# ulp-1-5

./: .gitignore  Cargo.toml  PROJECT_DIRECTION_LOG.md  PROJECT_FEASIBILITY.md  PROJECT_LOG.md  README.md  ULP-1.5-Networking.md  bytecode.txt  chain.txt  documentation.docx  extended_stratagies.md  filesystemInfo.txt  foundry.toml  general_guide.md  j9.md  p1_loop.sh  prompt.md  prompt_file_list.txt  prompt_notes.txt  results.txt  run_me.sh  structure.txt  tracking.txt  txtexport.py  txtexport_onefile.py  ulp-1.5.code-workspace  ulp1.5.md  z1.1.md  ~$cumentation.docx
abis/: ArbitrageExecutor.json  BalancerVault.json  IUniswapV3Factory.json  IUniswapV3Pool.json  IVelodromeFactory.json  MinimalSwapEmitter.json  SwapRouter.json  UniswapV3Pool.json  VelodromeRouter.json  VelodromeV2Pool.json
bot/src/: bindings.rs  config.rs  deploy.rs  encoding.rs  event_handler.rs  event_loop.rs  gas.rs  lib.rs  local_simulator.rs  main.rs  path_optimizer.rs  simulation.rs  state.rs  transaction.rs  utils.rs
bot/tests/: integration_test.rs
contracts/: ArbitrageExecutor.huff  FlashExecutor.huff  MinimalSwapEmitter.sol  SimpleArb.huff  TestContract.huff  UniV4Swapper.huff
node_scanner/: matched_pools.json  optimism_uniswap_v3_vs_balancer_v2_matched.json  optimism_uniswap_v3_vs_velodrome_v2_matched.json  package-lock.json  package.json  scan_pairs.js  scanner-analysis.md  scanner.js  scanner_config.json  scanner_config_docs.md  simple.js  simpleVelo.js
src/: main.rs  tut.rs
tests/: integration_test.rs  ws_event_loop_test.rs
