# Cargo.toml
[package]
name = "ulp1_5"
version = "0.1.0"
edition = "2021"

[features]
# Enables the local_simulator module and its dependencies
local_simulation = []

# Define the library target
[lib]
name = "ulp1_5" # Use the package name for the library
path = "bot/src/lib.rs"

# Define the main binary target
[[bin]]
name = "ulp1_5"
path = "bot/src/main.rs" # Adjusted path based on your info

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws", "ethers-solc"] }
tokio = { version = "1.37", features = ["full"] }
hex = "0.4"
eyre = "0.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rust_decimal removed
thiserror = "1.0" # Added thiserror
num-traits = "0.2.19"
chrono = { version = "0.4", features = ["clock"] }
# clap removed
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "5.5"
futures-util = "0.3"
lazy_static = "1.4.0" # Added lazy_static
rand = "0.8.5"
uniswap_v3_math = "0.2.0" # Corrected package name: For UniswapV3 swap calculations